<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_ui_basic"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@+id/title"
        android:text="@string/email"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        />
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/email_label"
        android:layout_alignBaseline="@id/email_label"
        android:hint="@string/enter_your_email"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"

        />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/password"
        android:layout_below="@+id/email_label"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:layout_toEndOf="@id/password_label"
        android:layout_alignBaseline="@id/password_label"
        android:layout_marginStart="12dp"
        />
    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_below="@id/password_label"
        android:layout_marginTop="30dp"
        />
    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/genders"
        android:layout_toEndOf="@id/gender_label"
        android:layout_alignBaseline="@id/gender_label"
        android:layout_marginStart="12dp"

        />
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/gender_spinner"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />











</RelativeLayout>